IMAGE AND TEXT CENTRALIZED

--- a/index.html
+++ b/index.html
@@ -7,9 +7,27 @@
     <link rel="stylesheet" href="stylesheet1.css">
     <title>Order Summary Component Main</title>
 </head>
-<body style="background: url() no-repeat;">
+<body style="background: url(pattern-background-desktop.svg) no-repeat;">
    <div class="container">
-        <img src="illusteation-hero.svg">
+       <div>
+           <img src="illustration-hero.svg">
+       </div>
+        <div class="Order">
+            <h2 class="title">Order Summary</h2>
+            <p class="order-sub">You can now download millions of songs, audiobooks and podcast on any device anywhere you like!</p>
+            <div class="Annual-plan">
+                <div class="music-icon-left">
+                    <img src="icon-music.svg" alt="">
+                    <div>
+                        <h5>Annual plan</h5>
+                        <p>$59.99/year</p>
+                    </div>  
+                </div>
+            </div>
+            <a href="a">Changes</a>
+        </div>
+        <a href="a">Proceed to payment</a>
+        <a href="a">Cancel Order</a>
     </div>
 </body>
 </html>
