styling the buttons

--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
             </div>
             <a href="a">Changes</a>
         </div>
-        <a href="a">Proceed to payment</a>
-        <a href="a">Cancel Order</a>
+        <div>
+            <button class="button button1">Proceed to payment</button>
+            <button class="button button2">Cancel Order</button>
+        </div>
     </div>
 </body>
 </html>
