Amended the index,Html and css
Created space between the changes tag and the buttons, also made the padding of the cancel button same with the payment button

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             <a href="a">Changes</a>
         </div>
         <div>
+            <p style="color: white;">hidden text</p>
+        </div>
+        <div>
             <button class="button button1">Proceed to payment</button>
             <button class="button button2">Cancel Order</button>
         </div>
