Curved edge for the hero image
edited the style and image tag

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body style="background: url(pattern-background-desktop.svg) no-repeat;">
    <div class="container">
        <div>
-           <img src="illustration-hero.svg">
+           <img src="illustration-hero.svg" class="wdn-stretch rounded-corners">
        </div>
         <div class="Order">
             <h2 class="title">Order Summary</h2>
