few changes on html and css
changed padding of button
center-aligned the texts

--- a/index.html
+++ b/index.html
@@ -10,28 +10,29 @@
 <body style="background: url(pattern-background-desktop.svg) no-repeat;">
    <div class="container">
        <div>
-           <img src="illustration-hero.svg" class="wdn-stretch rounded-corners">
+           <img src="illustration-hero.svg">
        </div>
         <div class="Order">
             <h2 class="title">Order Summary</h2>
-            <p class="order-sub">You can now download millions of songs, audiobooks and podcast on any device anywhere you like!</p>
+            <p class="order-sub">You can now listen to millions of songs, audiobooks and podcast on any device anywhere you like!</p>
             <div class="Annual-plan">
                 <div class="music-icon-left">
                     <img src="icon-music.svg" alt="">
-                    <div>
+                    <div class="plan">
+                        
                         <h5>Annual plan</h5>
-                        <p>$59.99/year</p>
+                        <p>$59.99/year</p> 
                     </div>  
                 </div>
             </div>
-            <a href="a">Changes</a>
+            <a href="a" class="change">Change</a>
         </div>
         <div>
             <p style="color: white;">hidden text</p>
         </div>
         <div>
             <button class="button button1">Proceed to payment</button>
-            <button class="button button2">Cancel Order</button>
+          <p class="order">  Cancel Order</p>  
         </div>
     </div>
 </body>
