--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body style="background: url(pattern-background-desktop.svg) no-repeat;">
    <div class="container">
        <div>
-           <img src="illustration-hero.svg" class="wdn-stretch rounded-corners">
+           <!-- <img src="illustration-hero.svg"> -->
+           <img src="illustration-hero.svg" class="wdn-stretch rounded-corners img-responsive">
        </div>
         <div class="Order">
             <h2 class="title">Order Summary</h2>
@@ -24,11 +25,14 @@
                     </div>  
                 </div>
             </div>
-            <a href="a">Changes</a>
+            <div>
+                <a href="a">Changes</a> 
+
+
+            </div>
+            
         </div>
-        <div>
-            <p style="color: white;">hidden text</p>
-        </div>
+        <div> <p style="color:white;">hidden text</p></div>
         <div>
             <button class="button button1">Proceed to payment</button>
             <button class="button button2">Cancel Order</button>
